[gd_scene load_steps=7 format=3 uid="uid://cyo0mrkemx8cf"]

[ext_resource type="Script" path="res://ManagePluginsPopup.gd" id="1_6p2g1"]
[ext_resource type="Texture2D" uid="uid://bvh1h8wghn3eu" path="res://Icons/Remove.svg" id="2_svl7u"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_yghm3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0r8wn"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc04q"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.202211, 0.23612, 0.290687, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc043"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.145098, 0.168627, 0.203922, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ManagePluginsPopup" type="Window"]
title = "Manage plugins"
initial_position = 2
size = Vector2i(864, 584)
transient = true
exclusive = true
script = ExtResource("1_6p2g1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0r8wn")

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="HBoxContainer" parent="Control/Control/MarginContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Control/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pc04q")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Installed plugins"
horizontal_alignment = 1

[node name="ColumnLabels" type="HBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Plugin name"

[node name="VSeparator" type="VSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
layout_mode = 2

[node name="Version" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
layout_mode = 2
text = "Version"

[node name="VSeparator2" type="VSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
layout_mode = 2

[node name="Status" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
custom_minimum_size = Vector2(106, 0)
layout_mode = 2
text = "Status"

[node name="VSeparator3" type="VSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
layout_mode = 2

[node name="Delete" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ColumnLabels"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("2_svl7u")
expand_mode = 2
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("3_yghm3")

[node name="PluginsContainer" type="VBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sc043")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
text = "Global plugins"
horizontal_alignment = 1

[node name="ColumnLabels" type="HBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ColumnLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Plugin name"

[node name="VSeparator" type="VSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ColumnLabels"]
layout_mode = 2

[node name="Version" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ColumnLabels"]
layout_mode = 2
text = "Version"

[node name="VSeparator2" type="VSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ColumnLabels"]
layout_mode = 2

[node name="Status" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ColumnLabels"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
text = "Add"

[node name="HSeparator" type="HSeparator" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("3_yghm3")

[node name="GlobalPluginsContainer" type="VBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
